k8s/persistence/persistence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence
spec:
  selector:
    matchLabels:
      app: persistence
  template:
    metadata:
      labels:
        app: persistence
        new: "true"
        old: "true"
    spec:
      containers:
        - name: persistence
          image: giovaz94/tea-store-general 
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "300Mi"  
              cpu: "300m"    
            limits:
              memory: "600Mi" 
              cpu: "600m"  
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: persistence-service
  annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "80"
      prometheus.io/path: "/metrics"   # optional, defaults to /metrics
spec:
  selector:
    app: persistence
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: persistence-service
spec:
  host: persistence-service
  subsets:
    - name: new
      labels:
        new: "true"
    - name: old
      labels:
        old: "true"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: persistence-service
spec:
  hosts:
    - persistence-service
  http:
    - route:
        - destination:
            host: persistence-service
            subset: new
          weight: 70
        - destination:
            host: persistence-service
            subset: old
          weight: 30
